# flasharr

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  COMMIT_CONVENTION.md  COMPLETE_SOLUTION.md  CONTRIBUTING.md  DOWNLOAD_BUTTON_FIX.md  Dockerfile  Dockerfile.production  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_URL_REFRESH.md  LATEST_VERSION_RECOGNIZED.md  LICENSE  PHASE2_DISCOVERY.md  PROJECT_SUMMARY.md  QA_TEST_REPORT.md  README.md  SEARCH_FILTERING_FIX.md  SEARCH_FILTERING_FIX_CORRECTED.md  SETUP.md  VERSION  VERSIONING_SETUP.md  debug_html.txt  debug_search.py  deploy.sh  deploy_fixes.sh  docker-compose.auto-update.yml  docker-compose.clean.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  docker-deploy.sh  docker-entrypoint.sh  fix_and_clean.sh  fshare_folder_list.txt  fshare_profile.html  init-appdata.sh  install.sh  (+18 more)
backend/: Cargo.toml  config.example.toml  config.toml  config.toml.example  flasharr.db
backend/src/: config.rs  constants.rs  error.rs  main.rs
backend/src/api/: accounts.rs  arr.rs  auth.rs  discovery.rs  downloads.rs  folder_source.rs  health.rs  indexer.rs  media.rs  mod.rs  sabnzbd.rs  sabnzbd_helpers.rs  search.rs  search_pipeline.rs  settings.rs  smart_search.rs  stats.rs  system.rs  tmdb.rs
backend/src/api/setup/: handlers.rs  mod.rs
backend/src/arr/: artifact_manager.rs  client.rs  mod.rs
backend/src/db/: media.rs  mod.rs  sqlite.rs
backend/src/downloader/: config.rs  duplicate_detector.rs  engine_simple.rs  error_classifier.rs  events.rs  manager.rs  mod.rs  orchestrator.rs  path_builder.rs  progress.rs  state_machine.rs  stats.rs  task.rs
backend/src/hosts/: base.rs  circuit_breaker.rs  fshare.rs  mod.rs  registry.rs
backend/src/services/: discovery_service.rs  download_service.rs  folder_cache_service.rs  library_sync_service.rs  mod.rs  tmdb_service.rs
backend/src/utils/: batch_utils.rs  dataset2_filter_test.rs  dataset_proof.rs  mod.rs  parser.rs  parser_comparison.rs  search_scoring_tests.rs  smart_tokenizer.rs  status_utils.rs  title_matcher.rs  unified_scorer.rs
backend/src/websocket/: mod.rs
backend/static/: index.html
backend/static/_app/: version.json
backend/static/_app/immutable/assets/: 0.D5nDu1Uo.css  0.TAgINRNq.css  10.BxR9_WzO.css  11.Do6GyYXY.css  2.DFD1hxg-.css  3.D-QuVIVB.css  3.D8Hfleo0.css  4.BrhofVJx.css  4.D73Z91Io.css  5.CPGbH_0u.css  5.DCmfmKlo.css  5.Xiz14phH.css  6.Cjp3Be34.css  6.D5qwImjK.css  7.D1_kWlTL.css  7.DcUcsox2.css  8.BeVF9X7Q.css  8.CBu2LuR7.css  8.D6NA-hPC.css  9.DSWCH5VX.css  9.DtMoL532.css  9.YOQYZZ5J.css  Carousel3D.BRpuh4j_.css  Carousel3D.DHUTiHit.css  Carousel3D.DvKu3uFb.css
backend/static/_app/immutable/chunks/: -y5WwqSg.js  4-53K8X0.js  6TvMqf6f.js  7UhqhOqn.js  8XRdHUAM.js  9m8yitw2.js  B-UKs8OR.js  B3_zbn8d.js  B5Ro9Rs_.js  B5XdgsWK.js  BCVek6JI.js  BD0CziRQ.js  BJxdqBCf.js  BLHyq54Q.js  BNLZGSLr.js  BRg3lEOO.js  BYbO11pS.js  B_NkLy0b.js  BdqCI1OP.js  BiA6B087.js  BlVPcqOR.js  BlbmIAEV.js  BnbZLmt_.js  BtXrgI5R.js  Bx19YLT4.js  BxyEhuUQ.js  C1AyBarf.js  C1treoV-.js  C3ID88jP.js  C41Z6t6u.js  C5KL2EZh.js  C6MLYkEF.js  C6rrSIs8.js  C7ZbP9nJ.js  C7mTaSSF.js  CF32mMaC.js  CL9ZHmPK.js  CMgJJb9x.js  CNLfh7tz.js  COjJVmrT.js  (+70 more)
backend/static/_app/immutable/entry/: app.B7hCRSGo.js  app.BNOEZN_b.js  app.BNcHuZnf.js  app.BWPXYspg.js  app.BYCTvNqp.js  app.BklOxl-y.js  app.Bw4LgDIA.js  app.C5HoCDNa.js  app.CFgiqE7e.js  app.CMlqDAaM.js  app.CTx4myeH.js  app.CfS9vfsT.js  app.CoDHivSn.js  app.CpGXCSDf.js  app.CsTU6PiT.js  app.D7POD0W4.js  app.D9bxBXNh.js  (+27 more)
(+542 files in other folders)
