[package]
name = "flasharr"
version = "2.0.0"
edition = "2021"
description = "Multi-host download manager with *arr integration"
authors = ["Flasharr Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "cookies"] }

# WebSocket
tokio-tungstenite = "0.21"
tokio-util = "0.7"
futures-util = "0.3"
socket2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
urlencoding = "2.1"
regex = "1.12.2"
once_cell = "1.21.3"
moka = { version = "0.12", features = ["future"] }
quick-xml = "0.31"  # For Newznab XML generation
toml = "0.8"        # For config file persistence

[profile.release]
lto = true
codegen-units = 1
strip = true
